--- a/src/app/components/create-customer/create-customer.component.html
+++ b/src/app/components/create-customer/create-customer.component.html
@@ -102,6 +102,7 @@
       </div>
 
       <button style="margin-top: 20px" [disabled]="!createCustomerForm.valid" type="submit" class="submit-button">Add Customer</button>
+<!--      <button (click)="onTest()" style="margin-top: 20px" type="button" class="submit-button">Add Customer</button>-->
     </form>
   </div>
 </div>
