added add and remove address and edit account functionality

--- a/src/app/components/dynamicComponents/update-personal-details/update-personal-details.component.html
+++ b/src/app/components/dynamicComponents/update-personal-details/update-personal-details.component.html
@@ -52,8 +52,8 @@
       <div class="form-group">
         <label for="language">Language:</label>
         <select formControlName="language" id="language" class="form-control" name="language">
-          <option value="eng">Hindi</option>
-          <option value="hin">English</option>
+          <option value="hin">Hindi</option>
+          <option value="eng">English</option>
           <option value="spa">Spanish</option>
           <option value="fin">Finish</option>
         </select>
