added instruction on main page

--- a/src/app/components/request-form/request-form.component.html
+++ b/src/app/components/request-form/request-form.component.html
@@ -20,4 +20,14 @@
     <button [disabled]="!f.valid" type="submit" class="submit-button">Get Details</button>
     <button (click)="onCreateCustomer()" style="margin-top: 20px" type="button" class="btn btn-dark">Add Customer</button>
   </form>
+
+  <div style="margin-top: 40px">
+    <h4>Dummy Data</h4>
+    <strong>ID Type: </strong>passport
+    <strong>ID Code: </strong>9898989898
+
+    <hr>
+
+    <p>To use more data visit <a href="https://sct-qrp-demo.qvantel.systems" >https://sct-qrp-demo.qvantel.systems</a> and take any customer's Identification or create one from here</p>
+  </div>
 </div>
