fix minor bux of country code

--- a/src/app/components/dynamicComponents/create-customer/create-customer.component.html
+++ b/src/app/components/dynamicComponents/create-customer/create-customer.component.html
@@ -82,7 +82,7 @@
           <select formControlName="country" id="country" class="form-control" name="country">
             <option value="IN">India</option>
             <option value="FI">Finland</option>
-            <option value="SW">Sweden</option>
+            <option value="SE">Sweden</option>
             <option value="ES">Spain</option>
           </select>
         </div>
