--- a/src/app/components/dynamicComponents/update-personal-details/update-personal-details.component.html
+++ b/src/app/components/dynamicComponents/update-personal-details/update-personal-details.component.html
@@ -75,7 +75,7 @@
         <select formControlName="nationality" id="nationality" class="form-control" name="nationality">
           <option value="IN">India</option>
           <option value="FI">Finland</option>
-          <option value="SW">Sweden</option>
+          <option value="SE">Sweden</option>
           <option value="ES">Spain</option>
         </select>
       </div>
