chage evnironment to fleet

--- a/src/app/components/request-form/request-form.component.html
+++ b/src/app/components/request-form/request-form.component.html
@@ -28,6 +28,6 @@
 
     <hr>
 
-    <p>To use more data visit <a href="http://10.150.6.225:7001" >http://10.150.6.225:7001</a> and take any customer's Identification or create one from here</p>
+    <p>To use more data visit <a href="https://sct-qrp-devint-fleet.qvantel.systems" >https://sct-qrp-devint-fleet.qvantel.systems</a> and take any customer's Identification or create one from here</p>
   </div>
 </div>
